# lithium-image

./: CMakeLists.txt  README.md
cmake/: ImageCalibrationLibConfig.cmake.in
example/: Calibration.cpp
include/: Logging.hpp
include/calibration/: BatchProcessing.hpp  Calibration.hpp  CameraCalibrator.hpp  CoreTypes.hpp  Export.hpp  ImageCache.hpp  ImageCorrection.hpp  OptimizedCorrection.hpp  Parameters.hpp  Utils.hpp
include/convolve/: ConvolutionProcessor.hpp  Convolve.hpp  DeconvolutionProcessor.hpp  ImageProcessingConfig.hpp  ImageProcessingUtils.hpp  MemoryPool.hpp  ProcessError.hpp  ThreadPool.hpp
include/denoise/: Denoiser.hpp  Enums.hpp  NoiseAnalyzer.hpp  Parameter.hpp  WaveletDenoiser.hpp
include/diff/: Core.hpp  ImageType.hpp  Parameter.hpp  Strategies.hpp
include/sharpen/: Algorithm.hpp  Parameters.hpp  Sharpener.hpp
include/utils/: Async.hpp  Expected.hpp  HasSimdSupport.hpp  ImageCache.hpp  MemoryPool.hpp  ThreadPool.hpp
src/: CMakeLists.txt
src/calibration/: BatchProcessing.cpp  CMakeLists.txt  CameraCalibrator.cpp  ImageCorrection.cpp  OptimizedCorrection.cpp
src/convolve/: ConvolutionProcessor.cpp  Convolve.cpp  DeconvolutionProcessor.cpp  ImageProcessingUtils.cpp  MemoryPool.cpp  ThreadPool.cpp
src/denoise/: Denoiser.cpp  NoiseAnalyzer.cpp  WaveletDenoiser.cpp
src/diff/: Core.cpp  ImageType.cpp  Strategies.cpp
src/sharpen/: Algorithm.cpp  Sharpener.cpp
src/utils/: ImageCache.cpp
